--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 tokio = { version = "0.2", features = ["macros", "rt-core", "rt-threaded"]}
+regex = "1"
+lazy_static = "1.4"
 
 [dev-dependencies]
 bincode = "1.2"
